maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:77: error: not found: value pos
  for (i <- casesAdjacentes(Array[Int](pos(0), pos(1)))) {
                                       ^JediEscaper:77: error: not found: value pos
  for (i <- casesAdjacentes(Array[Int](pos(0), pos(1)))) {
                                               ^